2015-10-22  Julien Bect  <julien.bect@centralesupelec.fr>

	@stk_hrect/subsref.m: Return an stk_hrect object if possible

	* arrays/@stk_hrect/subsref.m: Make sure that the returned value
	is still an stk_hrect object when the number of rows (which is
	two) is unchanged.

	@stk_hrect/ismember.m: Fix two bugs

	* arrays/@stk_hrect/ismember.m: Fix a bug that prevented ismember
	from working on more than one point at a time, and another bug
	in the case where B is not an stk_hrect object (it was incorrectly
	assumed to be an stk_dataframe in this case).

2015-10-11  Julien Bect  <julien.bect@centralesupelec.fr>

	mole/matlab/file_in_path.m: Fix two bugs

	* misc/mole/matlab/file_in_path.m: Fix two bugs.

2015-10-10  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_example_doe03.m: Use the appropriate flag for maximization

	* examples/02_design_of_experiments/stk_example_doe03.m: Use the
	appropriate flag for maximization. Also, use stk_plot1d for the
	upper panel plot to display pointwise credible intervals.

2015-09-25  Julien Bect  <julien.bect@centralesupelec.fr>

	Don't use UTF-8 in m-files

	* misc/design/stk_phipcrit.m: Müller -> Muller
	* misc/dist/stk_filldist.m: Idem
	* misc/dist/stk_filldist_exact.m: Idem

2015-09-15  Julien Bect  <julien.bect@centralesupelec.fr>

	README: Fix a typo

	* README: Fix a typo

2015-07-20  Julien Bect  <julien.bect@centralesupelec.fr>

	Use size_t for computations on positive indices

	* misc/dist/private/stk_dist_matrixx.c: Use size_t for
	computations on positive indices, otherwise we can get very
	unpleasant surprises (aka segfaults) as a consequence of negative
	indices...
	* misc/dist/private/stk_dist_matrixy.c: idem
	* misc/dist/private/stk_dist_pairwise.c: idem
	* misc/dist/private/stk_filldist_discr_mex.c: idem
	* misc/dist/private/stk_gpquadform_matrixx.c: idem
	* misc/dist/private/stk_gpquadform_matrixy.c: idem
	* misc/dist/private/stk_gpquadform_pairwise.c: idem
	* misc/dist/private/stk_mindist_mex.c: idem
